<resources>
    <string name="app_name">Trabajo 1</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_chat">Chat</string>
    <string name="title_precios">Precios</string>
    <string name="title_mas">Más</string>
    <string name="title_hora">01:39</string>
    <string name="title_porcentaje_bateria">69%</string>
    <string name="title_titulo_pantalla_inicio">Inicio</string>
    <string name="volver">Volver</string>
    <string name="bateria">Batería</string>
    <string name="linterna">Linterna</string>
    <string name="configuracion">Configuración</string>
    <string name="battery_percentage">%d%%</string>
    <string name="dolar_compra">Compra: %s</string>
    <string name="dolar_venta">Venta: %s</string>
    <string name="dolar_actualizado">Actualizado por última vez: %s</string>
    <!-- Mapa -->
    <string name="google_maps_key">AIzaSyBBsZKMWcUm2QQ4XOhPCvTv9uwIYTXVOzQ</string>
    <!-- Camara y grabadora -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flash">Flash</string>
    <string name="switch_camera">Cambiar cámara</string>
    <string name="back">Volver</string>
    <string name="record">Record</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="boton_enviar_mensaje">boton enviar mensaje</string>
    <string name="d_lar_oficial">Dólar Oficial</string>
    <string name="compra">Compra: -</string>
    <string name="venta">Venta: -</string>
    <string name="actualizado">Actualizado: -</string>
    <string name="ingresar_direcci_n">Ingresar dirección</string>
    <string name="buscar">Buscar</string>
    <string name="guardar">Guardar</string>
    <string name="mapa">Mapa</string>
    <string name="grabadora">Grabadora</string>
    <string name="video_camara">Video camara</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="mapa_">Mapa</string>
    <string name="grabadora_">Grabadora</string>
    <string name="camara_mas">Camara</string>
    <string name="configuraciones_mas">Configuraciones</string>
    <string name="medidor_mas">Medidor</string>
</resources>