<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mas.MasFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llMenu"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:divider="?android:attr/dividerVertical"
            android:showDividers="middle"
            >

            <!-- BOTÓN MAPA -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:backgroundTint="#2d2d2d"
                >

                <LinearLayout
                    android:id="@+id/btnMapa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:contentDescription="@string/mapa"
                        android:src="@drawable/ic_map"
                        app:tint="#FFFFFF"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/mapa_"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- BOTÓN GRABADORA -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:backgroundTint="#2d2d2d"
                >

                <LinearLayout
                    android:id="@+id/btnGrabadora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables"
                    >

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_mic"
                        android:contentDescription="@string/grabadora"
                        app:tint="#FFFFFF"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/grabadora_"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- BOTÓN CAMARA -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:backgroundTint="#2d2d2d"
                >

                <LinearLayout
                    android:id="@+id/btnVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables"
                    >

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_camera"
                        android:contentDescription="@string/video_camara"
                        app:tint="#FFFFFF"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/camara_mas"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- BOTÓN CONFIGURACIONES -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                android:backgroundTint="#2d2d2d"
                >

                <LinearLayout
                    android:id="@+id/btnSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables"
                    >

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_configuraciones_24dp"
                        android:contentDescription="@string/configuraciones"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/configuraciones_mas"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
