<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Barra superior personalizada -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customToolbar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/material_dynamic_neutral30"
        android:paddingTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Contenedor interno de la barra -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginEnd="8dp"
            >

            <!-- Hora -->

            <TextView
                android:id="@+id/txtHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/title_hora"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtBatteryPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_porcentaje_bateria"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />

            <ImageButton
                android:id="@+id/iconBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/linterna"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_bateria_24dp" />

            <ImageButton
                android:id="@+id/btnLinterna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/linterna"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_linterna_apagada" />

            <ImageButton
                android:id="@+id/iconPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/linterna"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_fono_24dp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>